ec2.tf
resource "aws_instance" "webserver"{
  ami = var.amiid
  instance_type = var.instancetype
  key_name = var.keyname
  tags = {
    Name = var.tag
  }
}
